Fixed Navbar Overflow For Mobile Devices

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,9 @@ main{
 header{
     padding: 12px 0px 0px 0px;
     background-color: hsl(0, 0%, 90%);;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 h1{
     color: black;
@@ -350,4 +352,19 @@ input{
 }
 .remove-btn:hover{
     transform: scale(1.2);
+}
+@media screen and (max-width: 600px) {
+  .navbar ul {
+    flex-wrap: wrap;
+  }
+
+  .navbar a {
+    font-size: 1.1em;
+    padding: 10px 12px;
+    height: auto;
+  }
+
+  .logo h1 {
+    font-size: 1.4em;
+  }
 }
